'初始化数据库模型类，完善页面'

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 
-<body>
+<body >
 
 <!--GJ-UI组件模块html代码开始-->
 <nav class="gj-nav1 gcl-yh">
@@ -287,29 +287,13 @@
             </div>
         </div>
         <div class="gj-lg-4">
-            <div class="gj-wk gcl-hb">
-                <!--搜索模块-->
-                <div class="gj-bt">
-                    <h3><i class="fa fa-search" aria-hidden="true"></i> 站内搜索</h3>
-                </div>
-                <div class="gj-body gj-ss1">
-                    <form action="https://www.guojian945.com/index.php">
-                        <input type="hidden" name="m" value="search">
-                        <input type="hidden" name="c" value="index">
-                        <input type="hidden" name="a" value="init">
-                        <input type="hidden" name="modelid" value="1" id="modelid">
-                        <input type="text" name="q" placeholder="请输入搜索关键词···">
-                        <button id="searchbtn" type="submit"></button>
-                    </form>
-                </div>
-            </div>
             <div class="gj-wk gcl-hb hidd-sm hidd-md">
                 <div class="gj-bt">
                     <h3><i class="fa fa-user-circle-o" aria-hidden="true"></i> 会员信息</h3>
                 </div>
 
                 <div class="gj-body gj-user">
-                    <form action="https://www.guojian945.com/member/index/login.html" method="post">
+                    <form action="login.html" method="post">
                         <input type="hidden" name="referer" value="https%3A%2F%2Fwww.guojian945.com%2F">
                         <div class="div1"><i class="fa fa-user" aria-hidden="true"></i>
                             <input type="text" required="" name="username" value="" placeholder="请输入用户名">
@@ -321,11 +305,7 @@
                             <input type="text" required="" name="code" class="" value="" placeholder="验证码">
                             <button type="submit" name="dosubmit" value="登 录">立即登录</button>
                         </div>
-                        <div class="div3"><a
-                                href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/register.html"
-                                class="btn btn-zc" role="button" target="_blank">免费注册</a> <a
-                                href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/init.html"
-                                class="btn btn-mm" role="button" target="_blank">忘记密码？</a></div>
+                        <div class="div3"><a href="login.html" class="btn btn-zc" role="button" target="_blank">免费注册</a>
                         <table cellpadding="0" cellspciong="1">
 
 
@@ -427,37 +407,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="gj-gg">广告位不存在！</div>
-            <div class="gj-wk gcl-hb">
 
-            </div>
-            <div class="gj-wk gcl-hb">
-                <!--标签模块-->
-                <div class="gj-bt">
-                    <h3><i class="fa fa-user-plus" aria-hidden="true"></i> 友情链接</h3>
-                    <a href="javascript:;"><i class="fa fa-angle-double-left" aria-hidden="true"></i> 申请友链</a>
-                </div>
-                <div class="gj-body gj-link2">
-                    <ul>
-                        <li><a href="javascript:;" target="_blank">浩仟网络</a></li>
-                        <li><a href="javascript:;" target="_blank">GJ-UI前端组件</a></li>
-                        <li><a href="javascript:;" target="_blank">袁志蒙博客</a></li>
-                        <li><a href="javascript:;" target="_blank">杨青个人博客</a></li>
-                        <li><a href="javascript:;" target="_blank">高永飞博客</a></li>
-                        <li><a href="javascript:;" target="_blank">碧羽墨轩</a></li>
-                        <li><a href="javascript:;" target="_blank">田珊珊个人博客</a></li>
-                        <li><a href="javascript:;" target="_blank">石增霖的个人博客</a></li>
-                        <li><a href="javascript:;" target="_blank">攸一教程网</a></li>
-                        <li><a href="javascript:;" target="_blank">堵文斐的个人博客</a></li>
-                        <li><a href="javascript:;" target="_blank">钟长森博客</a></li>
-                        <li><a href="javascript:;" target="_blank">易学堂</a></li>
-                        <li><a href="javascript:;" target="_blank">三叶草博客</a></li>
-                        <li><a href="javascript:;" target="_blank">前端共享博客</a></li>
-                        <li><a href="javascript:;" target="_blank">云轩博客</a></li>
-                        <li><a href="javascript:;" target="_blank">华仔个人博客</a></li>
-                    </ul>
-                </div>
-            </div>
+
 
         </div>
     </div>
