--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -64,7 +64,7 @@
                 <nav class="gj-ljdh">
                     <!--路径导航模块-->
                     <i class="fa fa-home" aria-hidden="true"></i>
-                    <a href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/index.html">首页</a>
+                    <a href="/">首页</a>
                     &gt; <a
                         href="https://www.17sucai.com/preview/1125772/2019-11-12/%E9%83%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2/index2.html"
                         title="我的作品">我的作品</a></nav>
@@ -129,22 +129,6 @@
 
         </div>
         <div class="gj-lg-4">
-            <div class="gj-wk gcl-hb">
-                <!--搜索模块-->
-                <div class="gj-bt">
-                    <h3><i class="fa fa-search" aria-hidden="true"></i> 站内搜索</h3>
-                </div>
-                <div class="gj-body gj-ss1">
-                    <form action="https://www.guojian945.com/index.php">
-                        <input type="hidden" name="m" value="search">
-                        <input type="hidden" name="c" value="index">
-                        <input type="hidden" name="a" value="init">
-                        <input type="hidden" name="modelid" value="1" id="modelid">
-                        <input type="text" name="q" placeholder="请输入搜索关键词···">
-                        <button id="searchbtn" type="submit"></button>
-                    </form>
-                </div>
-            </div>
             <div class="gj-wk gcl-hb hidd-sm hidd-md">
                 <div class="gj-bt">
                     <h3><i class="fa fa-user-circle-o" aria-hidden="true"></i> 会员信息</h3>
