'完成注册功能'

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 
-<body >
+<body>
 
 <!--GJ-UI组件模块html代码开始-->
 <nav class="gj-nav1 gcl-yh">
@@ -35,7 +35,8 @@
     <div class="gnav gclear">
         <div class="gj-logo gj-left">
             <a href="index.html"
-               title="Stage performers" style="color:#fff;font-size:30px;letter-spacing: 2px;margin: 4px 0;">Stage performers</a>
+               title="Stage performers" style="color:#fff;font-size:30px;letter-spacing: 2px;margin: 4px 0;">Stage
+                performers</a>
         </div>
         <i class="gbar fa fa-bars" aria-hidden="true"></i>
         <ul class="gnav-ul gj-right">
@@ -293,7 +294,7 @@
                 </div>
 
                 <div class="gj-body gj-user">
-                    <form action="login.html" method="post">
+                    <form action="register.html" method="post">
                         <input type="hidden" name="referer" value="https%3A%2F%2Fwww.guojian945.com%2F">
                         <div class="div1"><i class="fa fa-user" aria-hidden="true"></i>
                             <input type="text" required="" name="username" value="" placeholder="请输入用户名">
@@ -305,11 +306,10 @@
                             <input type="text" required="" name="code" class="" value="" placeholder="验证码">
                             <button type="submit" name="dosubmit" value="登 录">立即登录</button>
                         </div>
-                        <div class="div3"><a href="login.html" class="btn btn-zc" role="button" target="_blank">免费注册</a>
-                        <table cellpadding="0" cellspciong="1">
-
-
-                        </table>
+                        <div class="div3"><a href="register.html" class="btn btn-zc" role="button"
+                                             target="_blank">免费注册</a>
+                            <table cellpadding="0" cellspciong="1">
+                            </table>
                     </form>
                 </div>
 
@@ -407,7 +407,6 @@
                     </ul>
                 </div>
             </div>
-
 
 
         </div>
