--- a/templates/register.html
+++ b/templates/register.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <!--引入jquery.min.js组件脚本-->
     <script src="/static/js/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/static/js/main.js"></script>
 
 </head>
 
@@ -23,7 +24,7 @@
 <div class="gj-dlzc">
     <h3><img src="/static/images/logo.jpg"></h3>
     <h5>会员注册:</h5>
-    <form action="" method="post" onsubmit="return checkall()">
+    <form action="" id="register_form_con">
         <input type="hidden" name="referer" value="">
         <table cellpadding="0" cellspacing="1">
             <input type="text" name="username" id="username" value="" placeholder="请输入用户名">
@@ -31,8 +32,8 @@
             <input type="password" name="password2" id="password2" value="" placeholder="请再次输入密码">
             <input type="text" name="code" id="code" value="" placeholder="验证码">
             <div class="gjdl-zc">
-                <img src="/static/images/code.jpg" onclick="this.src=this.src+'?'" title="看不清，换一张">
-                <button type="submit" name="dosubmit" value="同意注册">立即注册</button>
+                <img src="/static/images/code.jpg"  onclick="this.src=this.src+'?'" title="看不清，换一张">
+                <button type="submit" name="" value="同意注册">立即注册</button>
             </div>
         </table>
     </form>
@@ -47,6 +48,7 @@
 
 <!--引入guojian.min.js组件脚本-->
 <script src="/static/js/guojian.min.js" type="text/javascript"></script>
+
 
 </body>
 
