'完成分页，评论功能以及详情页面用户信息'

--- a/templates/index03.html
+++ b/templates/index03.html
@@ -115,11 +115,11 @@
                     </div>
                     <div class="gtw-ul gclear">
                         <div class="gtw-img">
-                            <a href="5.html"><img src="/static/images/180313113835757.jpg"
-                                                  alt="一枚程序媛妹子口中的IT男其实是这样的"></a>
+                            <a href="detail.html"><img src="/static/images/180313113835757.jpg"
+                                                       alt="一枚程序媛妹子口中的IT男其实是这样的"></a>
                         </div>
                         <div class="gtw-body">
-                            <a href="5.html">
+                            <a href="detail.html">
                                 <h4>一枚程序媛妹子口中的IT男其实是这样的</h4>
                             </a>
                             <p>本人女，程序员一枚。讲讲我周围的it男吧。坐在我对面的小哥，有一阵当当做活动，满200减100什么的吧，他说他买书了。过几天，搬了一摞书回...</p>
@@ -264,9 +264,9 @@
                 </div>
                 <div class="gj-body gli-tuw1">
                     <div class="gtw-li gclear">
-                        <div class="gtw-img gj-left"><a href="5.html"><img src="/static/images/180313113835757.jpg"
-                                                                           alt=""></a></div>
-                        <div class="gtw-body"><a href="5.html">
+                        <div class="gtw-img gj-left"><a href="detail.html"><img src="/static/images/180313113835757.jpg"
+                                                                                alt=""></a></div>
+                        <div class="gtw-body"><a href="detail.html">
                             <h4>一枚程序媛妹子口中的IT男其实是这样的</h4>
                         </a> <span><i class="fa fa-clock-o"> 2018-01-27</i></span> <span><i class="fa fa-eye"> 2969</i></span>
                         </div>
