--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,6 @@
 
     <!--引入Font Awesome字体库样式表-->
     <link rel="stylesheet" href="/static/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css">
     <!--引入guojian.min.css组件样式表-->
     <link rel="stylesheet" href="/static/css/guojian.min.css">
     <!--引入style.css自定义样式表-->
@@ -92,7 +91,7 @@
                     </div>
                 </div>
                 {% endfor %}
-                <div id="paginations" class="page"></div>
+                <div id="paginations" class="pageinfo"></div>
                 <script>
                     $(function () {
                         $("#paginations").pagination({
